Fix bugs for Shift update by department managers functions

--- a/src/assets/scss/timesheet.scss
+++ b/src/assets/scss/timesheet.scss
@@ -192,6 +192,9 @@
       .detail {
         color: #FF0000;
         cursor: pointer;
+        i {
+          margin-left: 5px;
+        }
       }
     }
   }
